--- a/index.html
+++ b/index.html
@@ -4,21 +4,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Sacramento&display=swap" rel="stylesheet"> 
   <title>Primeiro Portfólio</title>
 </head>
 <body>
-  <h1>Stanrley Barbosa da Silva</h1>
+  <h1 id="name">Stanrley Barbosa</h1>
   <img id="eu-foto" src="./img/me.jpg" alt="eu na praia" width="400px">
-  <p id="descricao-foto">Além de apaixonado por tecnologia sou também por atividades<br> ao ar livre, pedalada, corrida e amo pegar uma boa praia!</p>
-  <p id="onde-vivo">Sou brasileiro, moro na cidade da Serra, Espírito Santo.</p>
-  <p id="minhas-habilidades">As habilidades que possuo são: boa lógica para solucionar problemas, boa comunicação, gostar de ajudar pessoas, ter perseverança e senso de <em>trabalho em equipe</em>, que é a habilidade que mais me orgulho de possuir. </p>
-  <a href="#eu-foto">Minha foto</a><br>
-  <a href="https://diolinux.com.br/" target="_blank">Diolinux</a>
-  <ul>
-    <li><a href="#descricao-foto">Descrição da foto</a></li>
-    <li><a href="#onde-vivo">De onde sou?</a></li>
-    <li><a href="#minhas-habilidades">Habilidades</a></li>
+  <ul id="">
+    <li><a href="#sobre-mim">Sobre mim</a></li>
+    <li><a href="#habilidades">Habilidades</a></li>
+    <li><a href="#redes-sociais">Redes Sociais</a></li>
   </ul>
+  <p id="sobre-mim">Além de apaixonado por tecnologia sou também por atividades<br> ao ar livre, pedalada, corrida e amo pegar uma boa praia. Moro na<br> cidade da <em>Serra, no Espírito Santo</em>. Faço Ciências da Computação<br> na <abbr title="Universidade de Vila Velha">UVV</abbr> e sou estudante de software web na Trybe. Acredito que <br>a tecnologia é capaz de transformar a vida das pessoas, por isso <br>invisto meu tempo estudando a mesma para solucionar problemas<br> reais das pessoas.</p> 
+
+  <h1>Habilidades</h1>
+  <ul id="habilidades">
+    <li class="items-skill">HTML/CSS</li>
+    <li class="items-skill">Git/Github</li>
+    <li class="items-skill">JavaScript</li>
+    <li class="items-skill">Node.js</li>
+    <li class="items-skill">C</li>
+    <li class="items-skill">Python</li>
+    <li class="items-skill">SQL/NoSQL</li>
+  </ul>
+
+  <div id="redes-sociais">
+    <a href="https://www.linkedin.com/in/stans-bs/">Linkedin</a>
+    <a href="https://github.com/3011stan">GitHub</a>
+  </div>
 
   
 </body>
