--- a/index.html
+++ b/index.html
@@ -6,33 +6,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Sacramento&display=swap" rel="stylesheet"> 
-  <title>Primeiro Portfólio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">  
+  <script src="https://kit.fontawesome.com/f3bf5f8142.js" crossorigin="anonymous"></script>
+  <title>Stans Developer</title>
 </head>
 <body>
-  <h1 id="name">Stanrley Barbosa</h1>
-  <img id="eu-foto" src="./img/me.jpg" alt="eu na praia" width="400px">
-  <ul id="">
-    <li><a href="#sobre-mim">Sobre mim</a></li>
-    <li><a href="#habilidades">Habilidades</a></li>
-    <li><a href="#redes-sociais">Redes Sociais</a></li>
-  </ul>
-  <p id="sobre-mim">Além de apaixonado por tecnologia sou também por atividades<br> ao ar livre, pedalada, corrida e amo pegar uma boa praia. Moro na<br> cidade da <em>Serra, no Espírito Santo</em>. Faço Ciências da Computação<br> na <abbr title="Universidade de Vila Velha">UVV</abbr> e sou estudante de software web na Trybe. Acredito que <br>a tecnologia é capaz de transformar a vida das pessoas, por isso <br>invisto meu tempo estudando a mesma para solucionar problemas<br> reais das pessoas.</p> 
+  <nav id="menu">
+    <a id="logo">STANS</a>
+    <div id="encapsula-navegar">
+      <ul id="navegar">
+        <li><a href="#">home</a></li>
+        <li><a href="#sobre-mim">sobre mim</a></li>
+        <li><a href="#habilidades">habilidades</a></li>
+        <li><a href="#redes-sociais">redes sociais</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div id="left-div">
+    <div class="pequena-caixa">
+      <h1 id="name">Stanrley B.</h1>
+      <h3>Front End, Back End, Web Designer =)</h3>
+    </div>
+  </div>
+  <div id="right-div">
+   
+  </div>
+  
+  <div class="sobre">
+    <p id="sobre-mim">Além de apaixonado por tecnologia sou também por atividades<br> ao ar livre, pedalada, corrida e amo pegar uma boa praia. Moro na<br> cidade da <em>Serra, no Espírito Santo</em>. Faço Ciências da Computação<br> na <abbr title="Universidade de Vila Velha">UVV</abbr> e sou estudante de software web na <em>Trybe</em>. Acredito que <br>a tecnologia é capaz de transformar a vida das pessoas, por isso <br>invisto meu tempo estudando a mesma para solucionar problemas<br> reais das pessoas.</p>
+    <div class="icone-hobbie">
+      <i class="fas fa-swimmer"></i>
+      <i class="fas fa-file-code"></i>
+      <i class="fas fa-biking"></i>
+      <i class="fas fa-running"></i>
+    </div>
+  </div>
+  
 
-  <h1>Habilidades</h1>
-  <ul id="habilidades">
-    <li class="items-skill">HTML/CSS</li>
-    <li class="items-skill">Git/Github</li>
-    <li class="items-skill">JavaScript</li>
-    <li class="items-skill">Node.js</li>
-    <li class="items-skill">C</li>
-    <li class="items-skill">Python</li>
-    <li class="items-skill">SQL/NoSQL</li>
+  <div class="hability">
+    <h1>Habilidades</h1>
+    <ul id="habilidades">
+      <li class="items-skill">HTML/CSS</li>
+      <li class="items-skill">Git/Github</li>
+      <li class="items-skill">JavaScript</li>
+      <li class="items-skill">Node.js</li>
+      <li class="items-skill">C</li>
+      <li class="items-skill">Python</li>
+      <li class="items-skill">SQL/NoSQL</li>
   </ul>
+  </div>
+  
 
   <div id="redes-sociais">
-    <a href="https://www.linkedin.com/in/stans-bs/">Linkedin</a>
-    <a href="https://github.com/3011stan">GitHub</a>
+    <span class="linkedin">
+      <a href="https://www.linkedin.com/in/stans-bs/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+    </span>
+    
+    <span class="github">
+      <a href="https://github.com/3011stan" target="_blank"><i class="fab fa-github-alt"></i></a>
+    </span>
+    
   </div>
 
   
