Fazendo o menu ficar fixo ao rolar o scroll

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Stans Developer</title>
 </head>
 <body>
-  <nav id="menu">
+  <nav id="menu" class="fixed-top">
     <a id="logo">STANS</a>
     <div id="encapsula-navegar">
       <ul id="navegar">
