Inserindo borda no texto sobre e customizando botoes de redes sociais

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   </div>
   
   <div class="sobre">
+    <h1>Sobre mim</h1>
     <p id="sobre-mim">Além de apaixonado por tecnologia sou também por atividades<br> ao ar livre, pedalada, corrida e amo pegar uma boa praia. Moro na<br> cidade da <em>Serra, no Espírito Santo</em>. Faço Ciências da Computação<br> na <abbr title="Universidade de Vila Velha">UVV</abbr> e sou estudante de software web na <em>Trybe</em>. Acredito que <br>a tecnologia é capaz de transformar a vida das pessoas, por isso <br>invisto meu tempo estudando a mesma para solucionar problemas<br> reais das pessoas.</p>
     <div class="icone-hobbie">
       <i class="fas fa-swimmer"></i>
