Corrigindo a ancoragem do botao habilidades

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul id="navegar">
         <li><a href="#">home</a></li>
         <li><a href="#sobre">sobre mim</a></li>
-        <li><a href="#habilidades">habilidades</a></li>
+        <li><a href="#ancora-habilidade">habilidades</a></li>
         <li><a href="#redes-sociais">redes sociais</a></li>
       </ul>
     </div>
@@ -43,7 +43,8 @@
     </div>
   </div>
   
-
+  <div id="ancora-habilidade"></div>
+  <br>
   <div class="hability">
     <h1>Habilidades</h1>
     <ul id="habilidades">
