--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
       <i class="fas fa-running"></i>
     </div>
   </div>
-  
-  <div id="ancora-habilidade"></div>
   <br>
-  <div class="hability">
+  <div class="hability" id="ancora-habilidade">
     <h1>Habilidades</h1>
     <ul id="habilidades">
       <li class="items-skill">HTML/CSS</li>
