--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="#sobre">sobre mim</a></li>
         <li><a href="#ancora-habilidade">habilidades</a></li>
         <li><a href="#redes-sociais">redes sociais</a></li>
+        <li><a href="#ancora-portfolio">portfólio</a></li>
       </ul>
     </div>
   </nav>
@@ -49,11 +50,19 @@
       <li class="items-skill">HTML/CSS</li>
       <li class="items-skill">Git/Github</li>
       <li class="items-skill">JavaScript</li>
+      <li class="items-skill">ReactJS</li>
+      <li class="items-skill">Redux</li>
+      <li class="items-skill">Jest e RTL</li>
       <li class="items-skill">Node.js</li>
       <li class="items-skill">C</li>
       <li class="items-skill">Python</li>
-      <li class="items-skill">SQL/NoSQL</li>
   </ul>
+  </div>
+  <div id="ancora-portfolio" class="portfolio">
+    <h1>Portfólio</h1>
+        <ul class="items-skill projects">
+          <li><a class="link-portfolio" href="https://3011stan.github.io/movie-card-library-crud/">Movie Card Library CRUD</a></li>
+      </ul>
   </div>
   
   <div id="redes-sociais">
