Adds project to portfolio

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
   <div id="ancora-portfolio" class="portfolio">
     <h1>Portfólio</h1>
         <ul class="items-skill projects">
+          <li><a class="link-portfolio" href="https://3011stan.github.io/menu-and-tables/#/">Menu and Tables</a></li>
           <li><a class="link-portfolio" href="https://3011stan.github.io/movie-card-library-crud/">Movie Card Library CRUD</a></li>
       </ul>
   </div>
